# fast-dav-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  E2E_TESTING.md  LICENSE  README-E2E.md  README.md  comprehensive_test.rs  debug_test.rs  flake.nix  run-e2e-tests.sh  run-unit-tests.sh  ultimate_test.rs  validation_test.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-tests.yml  publish.yml  update-flake-lock.yml
sabredav-test/: Dockerfile  README.md  composer.json  docker-compose.yml  reset-db.sh  setup.sh  test-setup.sh
sabredav-test/nginx/: Dockerfile  nginx.conf
sabredav-test/php-conf/: z-opcache-development.ini
sabredav-test/public/: index.php
sabredav-test/sql/: init.sql  seed.sql
src/: lib.rs
src/caldav/: client.rs  mod.rs  query.rs  streaming.rs  types.rs
src/carddav/: client.rs  mod.rs  streaming.rs  types.rs
src/common/: compression.rs  http.rs  mod.rs
src/webdav/: client.rs  mod.rs  streaming.rs  types.rs  xml.rs
tests/: caldav_suite.rs  mod.rs
tests/caldav/: README.md  auth_propfind_test.rs  auth_success_test.rs  auth_test.rs  compression_debug.rs  compression_diagnostic.rs  debug_auth.rs  debug_compression.rs  debug_tests.rs  e2e_tests.rs  mod.rs  parser_tests.rs  raw_tests.rs  streaming_tests.rs  ultra_simple.rs
tests/caldav/compression/: mod.rs
tests/caldav/core/: mod.rs
tests/caldav/discovery/: mod.rs
tests/caldav/operations/: calendar_tests.rs  event_tests.rs
tests/caldav/parallel/: mod.rs
tests/caldav/streaming/: streaming_tests.rs
tests/caldav/sync/: comparison_tests.rs  sync_tests.rs
tests/common/: mod.rs
tests/e2e/: mod.rs  util.rs
tests/e2e/caldav/: README.md  mod.rs
tests/e2e/caldav/compatibility/: compatibility_tests.rs  mod.rs
tests/e2e/caldav/compression/: compression_tests.rs  mod.rs
tests/e2e/caldav/core/: connectivity_tests.rs  mod.rs
tests/e2e/caldav/discovery/: discovery_tests.rs  mod.rs
tests/e2e/caldav/operations/: calendar_tests.rs  event_tests.rs  mod.rs  resource_tests.rs
tests/e2e/caldav/parallel/: mod.rs  parallel_tests.rs
tests/e2e/caldav/parsing/: parsing_tests.rs
tests/e2e/caldav/resilience/: mod.rs  resilience_tests.rs
tests/e2e/caldav/security/: security_tests.rs
tests/e2e/caldav/streaming/: mod.rs  streaming_tests.rs
tests/e2e/caldav/sync/: README.md  comparison_tests.rs  mod.rs  sync_tests.rs
tests/e2e/carddav/: README.md  mod.rs
tests/e2e/carddav/compression/: compression_tests.rs
tests/e2e/carddav/core/: connectivity_tests.rs
tests/e2e/carddav/discovery/: discovery_tests.rs
tests/e2e/carddav/operations/: addressbook_tests.rs  contact_tests.rs  mod.rs
tests/e2e/carddav/streaming/: streaming_tests.rs
tests/unit/: README.md  mod.rs
tests/unit/caldav/: caldav_helpers.rs  client_tests.rs  etag_tests.rs  integration_tests.rs  mod.rs  parser_edge_cases.rs  parser_tests.rs  streaming_tests.rs  xml_helper_tests.rs
tests/unit/carddav/: carddav_helpers.rs  client_tests.rs  etag_tests.rs  integration_tests.rs  mod.rs  parser_edge_cases.rs  parser_tests.rs  streaming_tests.rs  xml_helper_tests.rs
tests/unit/common/: compression_integration_tests.rs  compression_tests.rs  mod.rs
(+2 files in other folders)
