[package]
name = "fast-dav-rs"
version = "0.1.0"
edition = "2024"
description = "Fast CalDAV client with hyper + rustls, HTTP/2, compression, batching, and streaming XML parsing."
license = "LGPL-3.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots"] }
quick-xml = { version = "0.38.3", features = ["async-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip", "zstd"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[[test]]
name = "e2e_tests"
path = "tests/caldav/mod.rs"