[package]
name = "fast-dav-rs"
version = "0.4.2"
edition = "2024"
description = "Fast CalDAV/CardDAV client with hyper + rustls, HTTP/2, compression, batching, and streaming XML parsing."
license = "LGPL-3.0"
documentation = "https://docs.rs/fast-dav-rs"
homepage = "https://github.com/Goopil/fast-dav-rs"
repository = "https://github.com/Goopil/fast-dav-rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots"] }
quick-xml = { version = "0.39.0", features = ["async-tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip", "zstd"] }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
bytes = "1"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3"

[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "e2e_tests"
path = "tests/e2e/mod.rs"
